tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_parameters_count/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: `Default2::default` expects 2 parameters, but this method has 1
   ┌─ src/main.nr:12:12
   │
12 │         fn default(x: Field) -> Self {
   │            -------
   │

Aborting due to 1 previous error
